--- a/projects/nokhwook/pubspec.yaml
+++ b/projects/nokhwook/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   shared_preferences: ^2.0.0-nullsafety
   provider: ^6.0.5
+  flutter_local_notifications: ^13.0.0
 
 dev_dependencies:
   flutter_test:
