--- a/projects/nokhwook/pubspec.yaml
+++ b/projects/nokhwook/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.0.0-nullsafety
   provider: ^6.0.5
   flutter_local_notifications: ^13.0.0
+  logger: ^1.2.2
 
 dev_dependencies:
   flutter_test:
