--- a/projects/background_service_app/pubspec.yaml
+++ b/projects/background_service_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_foreground_task: ^4.0.1
   geolocator: ^9.0.2
   intl: ^0.18.0
+  adaptive_theme: ^3.2.0
 
 dev_dependencies:
   flutter_test:
