--- a/projects/path_in_the_woods/pubspec.yaml
+++ b/projects/path_in_the_woods/pubspec.yaml
@@ -45,6 +45,12 @@ dependencies:
   tuple: ^2.0.1
   geolocator: ^9.0.2
   intl: ^0.18.0
+  adaptive_theme: ^3.2.0
+  flutter_easyloading: ^3.0.5
+  logger: ^1.1.0
+  flutter_map_location_marker: ^5.2.1
+  shared_preferences: ^2.0.18
+  settings_ui: ^2.0.2
 
 dev_dependencies:
   flutter_test:
