--- a/projects/background_service_app/pubspec.yaml
+++ b/projects/background_service_app/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   geolocator: ^9.0.2
   intl: ^0.18.0
   adaptive_theme: ^3.2.0
+  subtitle_wrapper_package: ^2.1.1
+  tuple: ^2.0.1
+  card_swiper: ^2.0.4
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/subtitles/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
