--- a/projects/nokhwook/.gitignore
+++ b/projects/nokhwook/.gitignore
@@ -1,6 +1,9 @@
 # Key Files
 key.properties
 
+# Lock Files
+Gemfile.lock
+
 # Miscellaneous
 *.class
 *.log
@@ -11,6 +14,7 @@ key.properties
 .buildlog/
 .history
 .svn/
+.vscode/
 migrate_working_dir/
 
 # IntelliJ related
