--- a/projects/nokhwook/pubspec.yaml
+++ b/projects/nokhwook/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+3
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -36,19 +36,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  csv: ^5.0.1
+  csv: ^6.0.0
   flutter_spinkit: ^5.1.0
   sleek_circular_slider: ^2.0.1
-  shared_preferences: ^2.0.0-nullsafety
+  shared_preferences: ^2.3.3
   provider: ^6.0.5
-  flutter_local_notifications: ^13.0.0
-  logger: ^1.2.2
+  flutter_local_notifications: ^18.0.1
+  logger: ^2.4.0
   tuple: ^2.0.1
   settings_ui: ^2.0.2
   visibility_detector: ^0.4.0+2
   quiver: ^3.2.1
   responsive_grid: ^2.1.0
-  card_swiper: ^2.0.4
+  card_swiper: ^3.0.1
   swipable_stack: ^2.0.0
   adaptive_theme: ^3.2.0
   subtitle_wrapper_package: ^2.1.1
@@ -62,9 +62,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.14.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
