--- a/projects/nokhwook/pubspec.yaml
+++ b/projects/nokhwook/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+9
+version: 1.0.0+10
 
 environment:
   sdk: '>=2.18.6 <3.0.0'
@@ -53,6 +53,7 @@ dependencies:
   adaptive_theme: ^3.2.0
   subtitle_wrapper_package: ^2.1.1
   flutter_svg_provider: ^1.0.7
+  flutter_svg: ^2.0.16
 
 dev_dependencies:
   flutter_test:
