--- a/projects/nokhwook/pubspec.yaml
+++ b/projects/nokhwook/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   sleek_circular_slider: ^2.0.1
   shared_preferences: ^2.3.3
   provider: ^6.0.5
-  flutter_local_notifications: ^18.0.1
+  flutter_local_notifications: ^19.4.1
   logger: ^2.4.0
   tuple: ^2.0.1
   settings_ui: ^2.0.2
@@ -65,7 +65,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
   flutter_launcher_icons: ^0.14.1
 
@@ -82,7 +82,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/vocab.csv
+    - assets/vocab_th.csv
+    - assets/vocab_vt.csv
     - assets/images/
     - assets/subtitles/
 
