--- a/projects/nokhwook/pubspec.yaml
+++ b/projects/nokhwook/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_svg_provider: ^1.0.7
   flutter_svg: ^2.0.16
   flutter_toggle_tab: ^1.5.1
+  restart_app: ^1.3.2
 
 dev_dependencies:
   flutter_test:
